Moved from LinkedList to ArrayList for performance reasons